--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<tr><td>4. Creación de repositorio desla la aplicación de escritorio</td></tr>
 		<tr><td>5. Creación html y adición a el repositorio de prueba</td></tr>		
 		</table>
+		
+		<h4> Diana Prada, 11 de febrero de 2018 </h4>
 	  </div>
     </BODY>
 </HTML>
